# logviewer

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
scripts/: gen-sample.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/chart/: Chart.tsx  Overview.tsx  annotations.ts  buildData.ts  interactions.ts  snapshot.ts  tooltip.ts
src/data/: client.ts  groups.ts  load.ts
src/platform/: platform.ts
src/state/: recent.ts  store.ts
src/ui/: ChartGrid.tsx  SeriesTable.tsx  Sparkline.tsx  Toolbar.tsx
src/util/: color.ts  format.ts
src/worker/: data.worker.ts  dataStore.ts  infer.test.ts  infer.ts  parse.test.ts  parse.ts  pyramid.test.ts  pyramid.ts  stats.test.ts  stats.ts  types.ts
