[package]
name = "logviewer"
version = "0.1.0"
description = "High-performance time-series CSV log viewer"
authors = ["Cameron Tacklind"]
edition = "2021"

[lib]
# The library that the binary and (potentially) mobile targets share.
name = "logviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
